sass/web.site/modules/centerpage/_volume-overview.sass
.volume-overview-teaser
	padding-bottom: $page-padding--small/2
	&__wrapper
		display: block // no-flex fallback
		display: flex
		flex-direction: row
		margin: $page-padding $page-padding--small/2 0
	&__media
		flex-grow: 1
		margin-right: $page-padding
	&__media-container
		//width: remify(150px)
	&__issue,
	&__cta
		color: $zon-charcoal
		font-family: $font-tabletgothic
		font-size: remify(14px)
		font-weight: bold
		font-style: normal
		letter-spacing: $letter-spacing-l
		margin: 0
	&__cta
		+animated-interaction
		padding-bottom: remify(2px)
		font-weight: normal
		color: $zon-mid-grey
		border-bottom: 1px solid $zon-mid-grey
	&__caption
		flex-grow: 1
		padding-top: $page-padding
		white-space: nowrap

+respond-min($break-tablet-min)
	.volume-overview-teaser
		padding: $page-padding--small/2 $page-padding--small/2
		&__wrapper
			display: inline-block
			margin: $page-padding $page-padding--small/2
		&__media
			margin: 0
		&__media-container
			width: remify(220px)
		&__caption
			padding-top: $page-padding--small

.no-flexbox // basically only for small screens in legacy browsers
	.volume-overview-teaser
		&__caption
			padding-top: $page-padding--small/2

